[package]
name = "jitcord"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonrpsee = { version = "0.22.1", features = ["http-client"] }
poise = "0.6.1"
tokio = { version = "1.35.1", features = ["full"] }
serde = "1.0.197"
web3 = { version = "0.19.0", default-features = false }
serde_json = "1.0.114"
